templates/infra/30_mysql.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: @@NAMESPACE@@
  name: mysql
spec:
  selector:
    matchLabels:
      app: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - image: mariadb:10.7.1
        name: mysql
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: mysql-root-dir
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-root-dir
        persistentVolumeClaim:
          claimName: pvc-grafana-pusher-mysql
