templates/infra/40_phpmyadmin.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: @@NAMESPACE@@
  name: phpmyadmin
spec:
  selector:
    matchLabels:
      app: phpmyadmin
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: phpmyadmin
    spec:
      containers:
      - image: phpmyadmin/phpmyadmin
        name: phpmyadmin
