templates/infra/35_mysql-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
  namespace: @@NAMESPACE@@
spec:
  ports:
    - port: 3306
      protocol: TCP
      targetPort: mysql
  selector:
    app: mysql
  sessionAffinity: None
  type: ClusterIP
