templates/infra/45_phpmyadmin-service.yml
apiVersion: v1
kind: Service
metadata:
  name: phpmyadmin-service
  namespace: @@NAMESPACE@@
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: phpmyadmin
  sessionAffinity: None
  type: ClusterIP
