templates/infra/50_phpmyadmin-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: phpmyadmin
  namespace: @@NAMESPACE@@
spec:
  rules:
  - host: management.@@BASE_URL@@
    http:
      paths:
      - backend:
          service:
            name: phpmyadmin-service
            port:
              number: 80
        path: /
        pathType: Prefix
